ManifoldCF Change Log
$Id$


======================= Release 2.6 =====================

CONNECTORS-1357: Delete button doesn't work on listnotifications
(Markus Schuch)

CONNECTORS-1336: Update the Compatibility Matrix
(Piergiorgio Lucidi)

CONNECTORS-1355: Missing code for API deletion of mapping and
transformation connections.
(Julien Massiera, Karl Wright)

CONNECTORS-1344: Adds Slack Notification Connector
(Odilo Oehmichen, Markus Schuch, Rüdiger Kurz)

CONNECTORS-1349: Fix the modified_date and original_size Solr 
attributes.
(Cihad Guzel)

CONNECTORS-1338: Upgrade to SolrJ 6.3.0.
(Shinichiro Abe)

CONNECTORS-1343: Allow maximum year in report UI to be set based
on current year.
(Markus Schuch)

CONNECTORS-1342: Bad UI logic for "path" field in livelink connector.
(Lena Gurevich, Karl Wright)

CONNECTORS-1341: Bad logic in jira connector disables document
indexing.
(Chalitha Perera)

CONNECTORS-1325: Another example of bad XML from Microsoft has
been found and worked around.
(Konstantin Avdeev, Karl Wright)

CONNECTORS-1340: Revise connection strings for sybase and for
Oracle.  It's not clear why these were working before, given the change.
(Julien Massiera)

CONNECTORS-1337: Update POI jars to make them consistent with
Tika 1.13.
(Olivier Tavard)

======================= Release 2.5 =====================

CONNECTORS-1335: Log message cleanup.
(Furkan KAMACI)

CONNECTORS-1316: Upgrade to Tika 1.13.
(Furkan KAMACI)

CONNECTORS-1334: Break out forbidden api check into separate
precommit target.
(Furkan KAMACI)

CONNECTORS-1332: Add check for forbidden api's to ant build.
(Furkan KAMACI)

CONNECTORS-1238: Update to use SolrJ 5.5.2, ZooKeeper 3.4.8.
(Karl Wright)

CONNECTORS-1331: Do not set SSL socket factory unless SSL.
(Furkan KAMACI)

CONNECTORS-1330: Minor refactoring of LDAP connector.
(Furkan KAMACI)

CONNECTORS-1329: Add logging to LDAP connector.
(Furkan KAMACI)

CONNECTORS-1326: Fix URL for Confluence documents.
(Chalitha Perera)
