@@ -4,6 +4,9 @@ $Id$
 
 ======================= Release 2.6 =====================
 
+CONNECTORS-1361: The max_interval job field was missing from the API.
+(Cathal Mcguinness, Karl Wright)
+
 CONNECTORS-1357: Delete button doesn't work on listnotifications
 (Markus Schuch)
 
